translate java 17 code to java 8